# linux-wallpaperengine-gtk

./: .cursorrules  .cursorrules.backup  .gitignore  .pre-commit-config.yaml  .releaserc.json  LICENSE  LWPE-Dev.code-workspace  Makefile  README.md  SEMANTIC_RELEASE_SETUP.md  bandit-report.json  cef_dual_monitor_performance.patch  commit_message.txt  fix_docstrings.py  fix_docstrings_surgical.py  fix_my_mess.py  linux-wallpaperengine-gtk-standalone.py  linux-wallpaperengine-gtk.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml  semantic-release.yml
docs/: VISION.md
examples/: basic_optimization.py
scripts/: ast_syntax_fixer.py  build_monolith.py  reverse_demonolith.py
src/: linux-wallpaperengine-gtk.py
src/wallpaperengine/: __init__.py  machine_opt.py  main.py  name_optimizer.py  settings_dialog.py  wallpaper_context_menu.py  wallpaper_engine.py  wallpaper_window.py
tests/: conftest.py  pytest_suite_test.py  test_machine_opt.py  test_name_optimizer.py  test_profiler.py  test_wallpaper_engine.py
