[project]
name = "linux-wallpaperengine-gtk"
version = "0.1.0"
description = "GTK frontend for linux-wallpaperengine"
authors = [
    {name = "abcdqfr", email = "abcdqfr@users.noreply.github.com"},
]
dependencies = [
    "PyGObject>=3.42.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]