[project]
name = "linux-wallpaperengine-gtk"
version = "0.1.0"
description = "GTK frontend for linux-wallpaperengine"
authors = [
    {name = "abcdqfr", email = "abcdqfr@users.noreply.github.com"},
]
dependencies = [
    "PyGObject>=3.42.0",
]
requires-python = ">=3.8"

[project.scripts]
linux_wallpaperengine_gtk = "wallpaperengine.main:main"
linux-wallpaperengine-gtk = "wallpaperengine.main:main"  # For backward compatibility

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
# Build tools for creating standalone monolith
[tool.hatch.build.targets.wheel]
packages = ["src/wallpaperengine"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

# Custom build script for standalone monolith
[tool.hatch.build.hooks.custom]
path = "scripts/build_monolith.py"
